--- a/trunk/SabadBan/SabadBan/SymbolListHeader.xib
+++ b/trunk/SabadBan/SabadBan/SymbolListHeader.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -14,20 +14,14 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OEZ-DL-8iW">
                     <rect key="frame" x="0.0" y="0.0" width="571" height="57"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Trade" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Oh-8J-rIN">
-                            <rect key="frame" x="255" y="18" width="81" height="21"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" text="Last Trade" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Oh-8J-rIN">
+                            <rect key="frame" x="245" y="18" width="81" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="lblAmount" text="amount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDa-BC-9GV">
-                            <rect key="frame" x="8" y="18" width="58" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="lblVolume" text="Volume" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LX3-in-ySQ">
-                            <rect key="frame" x="70" y="18" width="58" height="21"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="lblVolume" text="حجم" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LX3-in-ySQ">
+                            <rect key="frame" x="110" y="18" width="28" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -38,18 +32,54 @@
                             <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="imgSortName" image="ic_sort_aes" translatesAutoresizingMaskIntoConstraints="NO" id="kFY-vB-y25">
+                            <rect key="frame" x="481" y="17" width="24" height="24"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="imgSortVolume" image="ic_sort_aes" translatesAutoresizingMaskIntoConstraints="NO" id="lg1-k5-QpQ">
+                            <rect key="frame" x="86" y="17" width="24" height="24"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="imgSortAmount" image="ic_sort_aes" translatesAutoresizingMaskIntoConstraints="NO" id="9SI-U7-rbq">
+                            <rect key="frame" x="0.0" y="17" width="24" height="24"/>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="lblAmount" text="amount" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDa-BC-9GV">
+                            <rect key="frame" x="24" y="18" width="58" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" red="0.16452825090000001" green="0.21934768020000001" blue="0.31888299190000002" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="ipg-PT-9mx" firstAttribute="centerY" secondItem="OEZ-DL-8iW" secondAttribute="centerY" id="1Xl-rZ-bNR"/>
-                        <constraint firstItem="8Oh-8J-rIN" firstAttribute="centerY" secondItem="OEZ-DL-8iW" secondAttribute="centerY" id="Brw-Ab-JSx"/>
+                        <constraint firstItem="lg1-k5-QpQ" firstAttribute="height" secondItem="kFY-vB-y25" secondAttribute="height" id="3yF-FL-Lse"/>
+                        <constraint firstItem="lg1-k5-QpQ" firstAttribute="width" secondItem="kFY-vB-y25" secondAttribute="width" id="64o-to-PUn"/>
+                        <constraint firstItem="XDa-BC-9GV" firstAttribute="leading" secondItem="9SI-U7-rbq" secondAttribute="trailing" id="8zn-JP-koy"/>
                         <constraint firstItem="XDa-BC-9GV" firstAttribute="leading" secondItem="OEZ-DL-8iW" secondAttribute="leading" constant="8" id="EVg-gW-yiF"/>
-                        <constraint firstItem="8Oh-8J-rIN" firstAttribute="centerX" secondItem="OEZ-DL-8iW" secondAttribute="centerX" constant="10" id="NyR-4e-s2H"/>
+                        <constraint firstItem="8Oh-8J-rIN" firstAttribute="centerX" secondItem="OEZ-DL-8iW" secondAttribute="centerX" priority="750" id="QY0-r3-4Sj"/>
+                        <constraint firstItem="ipg-PT-9mx" firstAttribute="leading" secondItem="kFY-vB-y25" secondAttribute="trailing" id="TFs-1y-mKk"/>
                         <constraint firstItem="XDa-BC-9GV" firstAttribute="centerY" secondItem="OEZ-DL-8iW" secondAttribute="centerY" id="Tqo-37-tUT"/>
-                        <constraint firstItem="LX3-in-ySQ" firstAttribute="leading" secondItem="OEZ-DL-8iW" secondAttribute="leading" constant="70" id="cua-hZ-joJ"/>
+                        <constraint firstItem="kFY-vB-y25" firstAttribute="leading" secondItem="8Oh-8J-rIN" secondAttribute="trailing" constant="25" id="b3t-PD-ZPN"/>
+                        <constraint firstItem="XDa-BC-9GV" firstAttribute="leading" secondItem="9SI-U7-rbq" secondAttribute="trailing" id="cMx-wF-Lo6"/>
+                        <constraint firstItem="LX3-in-ySQ" firstAttribute="leading" secondItem="OEZ-DL-8iW" secondAttribute="leading" constant="82" id="cua-hZ-joJ"/>
+                        <constraint firstItem="8Oh-8J-rIN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="LX3-in-ySQ" secondAttribute="trailing" constant="10" id="dTb-d8-li8"/>
+                        <constraint firstItem="LX3-in-ySQ" firstAttribute="leading" secondItem="lg1-k5-QpQ" secondAttribute="trailing" id="hzF-01-Lm3"/>
+                        <constraint firstItem="8Oh-8J-rIN" firstAttribute="centerY" secondItem="OEZ-DL-8iW" secondAttribute="centerY" id="mZc-Vk-eJD"/>
                         <constraint firstItem="LX3-in-ySQ" firstAttribute="centerY" secondItem="OEZ-DL-8iW" secondAttribute="centerY" id="oNu-mY-gg5"/>
+                        <constraint firstItem="lg1-k5-QpQ" firstAttribute="centerY" secondItem="OEZ-DL-8iW" secondAttribute="centerY" id="pK2-1Y-qfN"/>
                         <constraint firstAttribute="trailing" secondItem="ipg-PT-9mx" secondAttribute="trailing" constant="8" id="qXj-vG-wtJ"/>
+                        <constraint firstItem="kFY-vB-y25" firstAttribute="centerY" secondItem="ipg-PT-9mx" secondAttribute="centerY" id="tXg-U7-ETr"/>
+                        <constraint firstItem="9SI-U7-rbq" firstAttribute="leading" secondItem="OEZ-DL-8iW" secondAttribute="leading" id="tbR-E6-zrX"/>
+                        <constraint firstItem="lg1-k5-QpQ" firstAttribute="leading" secondItem="XDa-BC-9GV" secondAttribute="trailing" constant="4" id="xgR-To-dLc"/>
+                        <constraint firstItem="9SI-U7-rbq" firstAttribute="centerY" secondItem="OEZ-DL-8iW" secondAttribute="centerY" id="zio-jp-qFq"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="EVg-gW-yiF"/>
+                            <exclude reference="cMx-wF-Lo6"/>
+                            <exclude reference="cua-hZ-joJ"/>
+                            <exclude reference="b3t-PD-ZPN"/>
+                        </mask>
+                    </variation>
                 </view>
             </subviews>
             <constraints>
@@ -61,12 +91,18 @@
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="imgSortAmount" destination="9SI-U7-rbq" id="jQ4-wv-TPM"/>
+                <outlet property="imgSortName" destination="kFY-vB-y25" id="PV3-nZ-obm"/>
+                <outlet property="imgSortVolume" destination="lg1-k5-QpQ" id="Vxe-fh-hee"/>
                 <outlet property="lblAmount" destination="XDa-BC-9GV" id="Bho-m9-8wA"/>
                 <outlet property="lblLastTrade" destination="8Oh-8J-rIN" id="kbe-5n-5RL"/>
                 <outlet property="lblName" destination="ipg-PT-9mx" id="2db-aN-UxE"/>
                 <outlet property="lblVolume" destination="LX3-in-ySQ" id="Wgs-yc-sid"/>
             </connections>
-            <point key="canvasLocation" x="315.5" y="170.5"/>
+            <point key="canvasLocation" x="405.5" y="176.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="ic_sort_aes" width="24" height="24"/>
+    </resources>
 </document>
