--- a/trunk/SabadBan/SabadBan/en.lproj/Main.storyboard
+++ b/trunk/SabadBan/SabadBan/en.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="N2h-Tl-wNj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="N2h-Tl-wNj">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -351,7 +351,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9PZ-zv-VlB">
-                                <rect key="frame" x="20" y="84" width="560" height="201"/>
+                                <rect key="frame" x="20" y="84" width="560" height="181"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="marketDetailsCell" id="2II-vt-9ug" customClass="MarketDetailsCell" customModule="SabadBan" customModuleProvider="target">
@@ -362,17 +362,17 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="usR-WS-Vzq">
-                                                    <rect key="frame" x="8" y="11" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="8" y="13" width="36" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.92486092929999997" green="0.36227035410000002" blue="0.12653421200000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWT-GW-88A">
-                                                    <rect key="frame" x="337" y="11" width="215" height="21"/>
+                                                    <rect key="frame" x="337" y="13" width="215" height="17"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="215" id="BzH-ZA-lL5"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -392,7 +392,7 @@
                                 </prototypes>
                             </tableView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="XQB-9f-G26">
-                                <rect key="frame" x="160" y="293" width="281" height="29"/>
+                                <rect key="frame" x="160" y="273" width="281" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="281" id="fCd-q4-VJV"/>
                                 </constraints>
@@ -408,7 +408,7 @@
                                 </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="40" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="R0x-tC-Hq0">
-                                <rect key="frame" x="20" y="329" width="560" height="214"/>
+                                <rect key="frame" x="20" y="309" width="560" height="234"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="indexDetailsCell" rowHeight="40" id="kX8-wW-kZS" customClass="indexDetailsCell" customModule="SabadBan" customModuleProvider="target">
@@ -466,7 +466,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="9PZ-zv-VlB" secondAttribute="trailing" id="eB7-bk-zQN"/>
                             <constraint firstItem="79e-kH-EDU" firstAttribute="centerX" secondItem="XQB-9f-G26" secondAttribute="centerX" id="m0C-0h-PjZ"/>
                             <constraint firstAttribute="leadingMargin" secondItem="9PZ-zv-VlB" secondAttribute="leading" id="nk9-ZL-Ww4"/>
-                            <constraint firstItem="9PZ-zv-VlB" firstAttribute="height" secondItem="bD3-vR-pLy" secondAttribute="height" multiplier="1/3" constant="1" id="yvH-nT-1Kb"/>
+                            <constraint firstItem="9PZ-zv-VlB" firstAttribute="height" secondItem="bD3-vR-pLy" secondAttribute="height" multiplier="0.3" constant="1" id="yvH-nT-1Kb"/>
                             <constraint firstItem="R0x-tC-Hq0" firstAttribute="leading" secondItem="bD3-vR-pLy" secondAttribute="leadingMargin" id="yxi-Fo-Bkv"/>
                         </constraints>
                     </view>
@@ -522,7 +522,7 @@
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="nLU-1w-ydd">
                                             <rect key="frame" x="280" y="10" width="40" height="40"/>
-                                            <color key="backgroundColor" red="0.0" green="1" blue="0.038836428919999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="40" id="fEp-Na-1Su"/>
                                             </constraints>
@@ -2759,9 +2759,9 @@
         <image name="login_username" width="48" height="46"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="RP5-i4-ySo"/>
-        <segue reference="TCW-a9-t2w"/>
         <segue reference="nO4-SB-DDz"/>
         <segue reference="cbY-Qz-fGF"/>
+        <segue reference="cWM-m7-s8C"/>
+        <segue reference="TCW-a9-t2w"/>
     </inferredMetricsTieBreakers>
 </document>
